--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.510.0",
     "mongoose": "^8.14.3",
     "next": "15.3.2",
@@ -28,6 +29,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
+    "stripe": "^18.1.1",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
